# photobooth

./: readme.md
code/: CMakeLists.txt  cameracontroler.cpp  cameracontroler.h  gui.cpp  gui.h  imageprozessor.cpp  imageprozessor.h  main.cpp  metaoverlay.cpp  metaoverlay.h
data/: config.txt
